samples/_failures_safe/1761595270_3e5775_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51667e11.c: In function ‘main’:
./samples/SAFE/__tmp_51667e11.c:164:9: error: expected declaration or statement at end of input
  164 |         fprintf(stderr, "Empty input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_51667e11.c:164:9: error: expected declaration or statement at end of input
